# greys-data

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: __init__.py  datasets.py  settings.py
data/: __init__.py  clean.py  fetch.py  generate.py
data/aws/: __init__.py  client.py
data/lib/: collate.py  dataset.py  preprocessing.py
scheduler/: __init__.py  daily_job.py
scripts/: run_daily.sh  viewer.ipynb
tests/: __init__.py  test_imports.py
