[project]
name = "greys-data"
version = "0.1.0"
description = "Data generation pipeline for greys projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.2",
    "polars>=1.40.1",
    "typer[all]>=0.9.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "numpy>=2.4.4",
    "tqdm>=4.67.3",
]
